# note-reader

./: Cargo.toml  README.md
src/: audio.rs  file_cache.rs  main.rs  paragraph.rs  polly.rs
