[package]
name = "note-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17"
rand = "0.8"
aws-config = "0"
aws-sdk-polly = "0"
aws-credential-types = {version = "0", features = ["hardcoded-credentials"]}
tokio = { version = "1", features = ["full"] }
bytes = "1"
regex = "1.7"
lazy_static = "1.4"
egui = "0.21"
rfd = "0.11"
eframe = { version = "0.21.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",
] }
serde = { version = "1", features = ["derive"] }
